remove preview warnings and clean up the code a bit